[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/scenes/Gameplay.gd" type="Script" id=1]
[ext_resource path="res://src/sprites/atom.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/Play Area.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/scenes/Timer.tscn" type="PackedScene" id=7]

[node name="Gameplay" type="Node2D"]
script = ExtResource( 1 )

[node name="LeftPlayArea" parent="." instance=ExtResource( 6 )]
self_modulate = Color( 1, 0.701961, 0.701961, 1 )
position = Vector2( 400, 450 )
player = "p1"

[node name="Tiles" parent="LeftPlayArea" index="1"]
visible = true
self_modulate = Color( 1, 0.701961, 0.701961, 1 )

[node name="RightPlayArea" parent="." instance=ExtResource( 6 )]
self_modulate = Color( 0.701961, 0.701961, 1, 1 )
position = Vector2( 1200, 450 )
player = "p2"

[node name="Tiles" parent="RightPlayArea" index="1"]
visible = true
self_modulate = Color( 0.701961, 0.701961, 1, 1 )

[node name="Timer" parent="." instance=ExtResource( 7 )]
one_shot = true

[node name="Minimap" type="Node2D" parent="."]
position = Vector2( 0, 16 )

[node name="Left" type="Sprite" parent="Minimap"]
self_modulate = Color( 1, 0.7, 0.7, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Right" type="Sprite" parent="Minimap"]
self_modulate = Color( 0.7, 0.7, 1, 1 )
position = Vector2( 1600, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="LeftPlayArea"]
[editable path="RightPlayArea"]
